# aseprite

./: .clang-tidy  .gitignore  CMakeLists.txt  INSTALL.md
.github/workflows/: build-auto.yml  build.yml  clang_tidy.yml  close_spam.yml  package.yml  precommit.yml
data/: pref.xml
data/fonts/: fonts.xml
data/strings/: en.ini
data/widgets/: export_sprite_sheet.xml  options.xml
emscripten/: CMakeLists.txt  README.md
emscripten/bindings/: embind_core.cpp  scripting_notes.md
emscripten/stubs/: memory_file_interface.cpp  memory_file_interface.h
emscripten/tools/: build.sh  smoke.mjs
src/: README.md
src/app/: console.cpp  doc.cpp  doc.h  doc_exporter.cpp  doc_exporter.h  doc_observer.h  doc_range_ops.cpp  doc_range_tests.cpp  file_selector.cpp  ini_file.cpp  transaction.cpp  tx.h
src/app/commands/: cmd_canvas_size.cpp  cmd_cel_opacity.cpp  cmd_cel_properties.cpp  cmd_clear_cel.cpp  cmd_crop.cpp  cmd_deselect_mask.cpp  cmd_duplicate_layer.cpp  cmd_duplicate_slice.cpp  cmd_export_sprite_sheet.cpp  cmd_export_sprite_sheet.h  cmd_fill_and_stroke.cpp  cmd_mask_all.cpp  cmd_mask_content.cpp  cmd_move_mask.cpp  cmd_new_brush.cpp  cmd_options.cpp  cmd_palette_size.cpp  cmd_paste_text.cpp  cmd_remove_layer.cpp  cmd_remove_slice.cpp  cmd_run_command.cpp  cmd_save_file.cpp  cmd_undo.cpp  move_thing.cpp
src/app/crash/: session.cpp
src/app/script/: frame_class.cpp  script_input_chain.cpp
src/app/ui/: doc_view.cpp
src/app/ui/editor/: editor.cpp  editor.h  moving_cel_state.cpp  moving_pixels_state.cpp  moving_pixels_state.h  pixels_movement.cpp  pixels_movement.h
src/app/ui/skin/: skin_theme.cpp
src/app/ui/timeline/: ani_controls.cpp
src/app/util/: clipboard.cpp  layer_boundaries.cpp
src/doc/: cel_data.cpp  slice.cpp  tag.cpp  tileset.cpp
src/tests/: app_test.h
src/ui/: combobox.cpp  manager.cpp  manager.h  message.h  popup_window.cpp  widget.cpp  window.cpp  window.h
tests/scripts/: multi_layer_selection_copy.lua
web/: README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
web/public/aseprite/: aseprite_core.js  aseprite_core.wasm
web/src/: main.ts  styles.css
web/src/engine/: AsepriteEngine.ts  types.ts
web/src/persist/: projectStore.ts
web/src/ui/: EditorApp.ts
web/tests/: engine.test.ts  persist.test.ts
